--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>Phones World</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
-    
+<body class="bg-success  bg-opacity-10">
+    <h2 class="text-center fs-1 mt-3 ">Choose Your Phone </h2>
+
+    <div class="input-group mb-3 mx-auto w-50 mt-3">
+        <input id="search-field" type="text" class="form-control" placeholder="search phone" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <button onclick="searchPhone ()" class="btn btn-outline-light bg-success" type="button" id="button-search">Search</button>
+      </div>
 
 
 
