--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
 
 
 <!-- ------------search result--------- --->
-
-<div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 mx-auto mt-5">
+<section class="container">
+  <div id="search-result" class="row row-cols-1 row-cols-md-3 g-5 mx-auto mt-5 w-100 rounded-3 ">
    
     
   </div>
 
   <div id="not-found" class="alert alert-warning alert-dismissible fade show text-center fs-2 w-50 col-md-3 offset-md-3" role="alert">
     <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <button  type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
+</section>
+
 
 
 
