--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="bg-success  bg-opacity-10">
-    <h2 class="text-center fs-1 mt-3 ">Choose Your Phone </h2>
+    <h2 class="text-center fs-1 mt-3 ">Phones World </h2>
+
 <!-- ---------SEARCH AREA--------- -->
     <div class="input-group mb-3 mx-auto w-50 mt-3">
         <input id="search-field" type="text" class="form-control" placeholder="search phone" aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -42,7 +43,7 @@
 
 
 
-
+<!-- ------js area -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
