--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="bg-success  bg-opacity-10">
-    <h2 class="text-center fs-1 mt-3 ">Phones World </h2>
+    <h2 class="text-center fs-1 mt-3 text-success">The World of Mobile </h2>
 
 <!-- ---------SEARCH AREA--------- -->
     <div class="input-group mb-3 mx-auto w-50 mt-3">
@@ -30,7 +30,7 @@
 
    
   <!-- ---------search phones -->
-  <div id="search-result" class="row row-cols-1 row-cols-md-3 g-5 mx-auto mt-5 w-100 rounded-3 ">
+  <div id="search-result" class="row row-cols-1 row-cols-md-3 g-5 mx-auto mt-5 mb-4 w-100 rounded-3 ">
    
     
   </div>
@@ -40,7 +40,6 @@
     <button  type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 </section>
-
 
 
 <!-- ------js area -->
